tests/ui/self/arbitrary-self-opaque.stderr
error[E0307]: invalid `self` parameter type: `Bar`
  --> $DIR/arbitrary-self-opaque.rs:8:18
   |
LL |     fn foo(self: Bar) {}
   |                  ^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error: item does not constrain `Bar::{opaque#0}`
  --> $DIR/arbitrary-self-opaque.rs:8:8
   |
LL |     fn foo(self: Bar) {}
   |        ^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/arbitrary-self-opaque.rs:4:12
   |
LL | type Bar = impl Sized;
   |            ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0307`.
